# django-rest-auth

./: .coveragerc  .coveralls.yml  .gitignore  .travis.yml  AUTHORS  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.  README.md  README.rst  codecov.yml  dev-requirements.txt  flake8  manage.py  runtests.py  setup.cfg  setup.py  test_requirements.pip  test_settings.py  tox.ini
.circleci/: config.yml
.github/workflows/: main.yml
demo/: Dockerfile  db.sqlite3  docker-compose.yml  requirements.pip  requirements.txt
demo/demo/: settings.py  urls.py  wsgi.py
demo/myapp/: apps.py  serializers.py
demo/react-spa/: package.json
demo/templates/: base.html  email_change.html  email_verification.html  home.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_confirm.html  signup.html  user_details.html
dj_rest_auth/: __version__.py  app_settings.py  jwt_auth.py  models.py  serializers.py  social_serializers.py  urls.py  utils.py  views.py
dj_rest_auth/registration/: app_settings.py  serializers.py  urls.py  views.py
dj_rest_auth/tests/: django_urls.py  mixins.py  requirements.pip  settings.py  test_api.py  test_social.py  urls.py
docs/: Makefile  api_endpoints.rst  changelog.rst  conf.py  configuration.rst  demo.rst  disclosure.rst  faq.rst  index.rst  installation.rst  introduction.rst  make.bat
rest_auth/: app_settings.py  django_test_urls.py  models.py  runtests.py  serializers.py  social_serializers.py  test_settings.py  test_urls.py  tests.org.py  tests.py  urls.py  utils.py  views.py
rest_auth/tests/: mixins.py  (+8 more)
tests/: django_urls.py  settings.py
(+55 files in other folders)
