[bdist_wheel]
universal = 1


[flake8]
max_line_length = 120
max_complexity = 10
exclude = migrations


[coverage:run]
branch = true
source = .
include = rest_auth/*

[coverage:report]
include = rest_auth/*
omit =
    *migrations*
    tests


[metadata]
name = django-rest-auth
version = 0.9.5
keywords = django, rest, auth, registration, rest-framework, django-registration, api
description = Create a set of REST API endpoints for Authentication and Registration
long_description = file: README.rst
license = MIT
license_file = LICENSE

author = Sumit Chachra
author_email = chachra@tivix.com
url = http://github.com/Tivix/django-rest-auth

classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    Django >= 1.8.0
    djangorestframework >= 3.1.3

[options.extras_require]
with_social =
    django-allauth >= 0.25.0

[options.packages.find]
exclude =
    tests
